fixed spacing on homepage

--- a/public/css/style.scss
+++ b/public/css/style.scss
@@ -587,6 +587,7 @@ body{
           width: 100%;
           margin-top: 5px;
           margin-left: 0;
+          margin-bottom: -.5rem;
           font-size: 5vw;
           // text-align: center;
           font-family: $fancy;
